--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="story">
 
     </div>
-    <a id="link" href="/" style="display: none;">&lt;- Go back</a>
+    <a id="link" href="." style="display: none;">&lt;- Go back</a>
 <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
