styling changes till now

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>MadLib Mania</title>
 </head>
 <body>
     <h1>Yoooo! Welcome to MadLib Mania</h1>
-    <h3 id="info"></h3>
-    <ul id="madlibs">
+    <main>   
+        <h3 id="info"></h3>
+        <ul id="madlibs">
 
-    </ul>
-    <div id="story">
-
-    </div>
-    <a id="link" href="." style="display: none;">&lt;- Go back</a>
+        </ul>
+        <div id="story">
+        </div>
+        <a id="link" href="." style="display: none;">⬅ Go back</a>
+    </main>
 <script type="module" src="./scripts/script.js"></script>
+<footer>
+    <p>Made with ❤ by Aaditya Chopra and Musa Ali</p>
+</footer>
 </body>
 </html>
