--- a/about.html
+++ b/about.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>About MadLib Mania</title>
+    <title>About MadLibs Mania</title>
 </head>
 <body>
-    <h1>Yoooo! Welcome to MadLib Mania</h1>
+    <h1>Yoooo! Welcome to MadLibs Mania</h1>
+    <nav>
+        <a href="./index.html">Home</a> | 
+        <a href="./about.html">About</a>
+    </nav>
     <main>   
         <h2 id="info">You may be wondering how we made MadLib Mania 🤔</h2>
         <p>Well, there are three main things to know about this to make your own version of MadLib Mania: </p>
