--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>MadLib Mania</title>
+    <title>MadLibs Mania</title>
 </head>
 <body>
-    <h1>Yoooo! Welcome to MadLib Mania</h1>
+    <h1>Yoooo! Welcome to MadLibs Mania</h1>
+    <nav>
+        <a href="./index.html">Home</a> | 
+        <a href="./about.html">About</a>
+    </nav>
     <main>   
         <h3 id="info"></h3>
         <ul id="madlibs">
